--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ author:
   name             : "Weichao Luo"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Shenzhen, China"
+  employer         : "Pengcheng Laboratory"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "luowch@pcl.ac.cn" 
 
   # Academic websites
   academia         : # URL
